[package]
name = "arb-airdrop-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1"
features = ["full", "parking_lot"]
[dependencies.reqwest]
version = "0.11"
features = ["json", "multipart"]
[dependencies.anyhow]
version = "1"
[dependencies.scraper]
version = "0.15"